Prevent long negatives wrapping in business cases

--- a/app/assets/stylesheets/testing_grounds.css.scss
+++ b/app/assets/stylesheets/testing_grounds.css.scss
@@ -549,5 +549,9 @@ ul.nav-tabs > li.active > a.error {
 
 table span.static{
   display: inline-block;
-  width: 120px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  vertical-align: middle;
+  white-space: nowrap;
+  width: 130px;
 }
